@@ -7,6 +7,7 @@ SYNOPSIS
      $obj->parse($pyx, $out);
      $obj->parse_file($input_file, $out);
      $obj->parse_handle($input_file_handler, $out);
+     $obj->finalize;
 
 SUBROUTINES
     "new()"
@@ -33,6 +34,10 @@ SUBROUTINES
              Parse PYX handler.
              Output is serialization to SGML.
              If $out not present, use 'output_handler'.
+             Returns undef.
+
+    "finalize()"
+             Finalize opened tags, if exists.
              Returns undef.
 
 ERRORS
