@@ -1,4 +1,5 @@
 0.03
+ - Add finalize() method.
 
 0.02 2015-10-21T17:00:08+02:00
  - Improve SEE ALSO section in doc.
